# simple3d

./: .gitignore  CMakeLists.txt  DEVELOP_PLAN.md  GLFWKeyboardInput.cpp  GLFWKeyboardInput.h  GLFWMouseInput.cpp  GLFWMouseInput.h  README.md  REFACTORING_PLAN.md  main.cpp  scene1.json
assets/models/military_trenches_storage_crate_wood_worn_01_zjkocdjtq_high/: Military_Trenches_Storage_Crate_Wood_Worn_01_zjkocdjtq_High.fbx  zjkocdjtq.json
assets/models/shira/: Shira_animation.DAE
assets/prefabs/: ground_1.json
assets/scenes/: test.json
assets/shaders/: color.fs  defaultColorLight.fs  defaultColorLight.fsh  depth.fsh  depth.vsh  light_source_shader.fs  light_source_shader.vs  material3d_shader_example.fs  pbr_result.fsh  shader.fs  shader.vs  shader_skin.vsh  skybox.fsh  skybox.vsh
cmakeModules/: FindAssimp.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake  FindSOIL.cmake
config/: imgui.ini
include/SOIL/: SOIL2.c
libs/SOIL/: soil2-debug.lib  soil2.lib
src/: BoxModel.cpp  BoxModel.h  Device3D.cpp  Device3D.h  Engine.cpp  Engine.h  ExternalModel.cpp  ExternalModel.h  GLEWImporter.h  GLUtils.cpp  GLUtils.h  Material3D.cpp  Material3D.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Pivot3D.cpp  Pivot3D.h  Scene3D.cpp  Scene3D.h  Shader.cpp  Shader.h  UpdateBroadcaster.cpp  UpdateBroadcaster.h
src/app/: Application.cpp  Application.h
src/behaviours/: AnimatorBehaviour.cpp  AnimatorBehaviour.h  Behaviour.cpp  Behaviour.h  BehaviourFactory.cpp  BehaviourFactory.h  CameraBehaviour.cpp  CameraBehaviour.h  DemoBehaviour.cpp  DemoBehaviour.h  FlyCameraBehaviour.cpp  FlyCameraBehaviour.h  LightComponent.cpp  LightComponent.h  OrbitCameraBehaviour.cpp  OrbitCameraBehaviour.h  RotatorBehaviour.cpp  RotatorBehaviour.h
src/behaviours/reflection/: Property.h  References.h
src/camera/: Camera.cpp  Camera.h  FirstPersonCamera.h  FreeLookCamera.cpp  FreeLookCamera.h
src/editor/: EditorConfig.cpp  EditorConfig.h  EditorUI.cpp  EditorUI.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  MaterialsInspectorPanel.cpp  MaterialsInspectorPanel.h  MenuBarPanel.cpp  MenuBarPanel.h  PropertyDrawer.cpp  PropertyDrawer.h  ViewportPanel.cpp  ViewportPanel.h
src/events/: Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  IKeyboardListener.h  IMouseListener.h  IObjectSelectorListener.h  IUpdateListener.h
src/input/: GLFWKeyboardInput.cpp  GLFWKeyboardInput.h  GLFWMouseInput.cpp  GLFWMouseInput.h  KeyboardInput.cpp  KeyboardInput.h  MouseInput.cpp  MouseInput.h
src/lighting/: ILightingModel.h  PBRLightingModel.cpp  PBRLightingModel.h  PhongLightingModel.cpp  PhongLightingModel.h  UnlitLightingModel.cpp  UnlitLightingModel.h
src/materials/: ColorMaterial.cpp  ColorMaterial.h  DepthMaterial.cpp  DepthMaterial.h  Filter3d.cpp  Filter3d.h  Material3D.cpp  Material3D.h  MaterialBase.cpp  MaterialBase.h  ObjectIdMaterial.cpp  ObjectIdMaterial.h  ShaderFactory.cpp  ShaderFactory.h  SkinnedMaterial3D.cpp  SkinnedMaterial3D.h  TextureFactory.cpp  TextureFactory.h  materialshelper.cpp  materialshelper.h
src/materials/filters/: ColorFilter.cpp  ColorFilter.h  Filter3d.cpp  Filter3d.h  FilterData.h  FilterFactory.cpp  FilterFactory.h  NormalMapFilter.cpp  NormalMapFilter.h  TextureFilterBase.cpp  TextureFilterBase.h  TextureMapFilter.cpp  TextureMapFilter.h
src/models/: BoxModel.cpp  BoxModel.h  ConeModel.cpp  ConeModel.h  CylinderModel.cpp  CylinderModel.h  ExternalModel.cpp  ExternalModel.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PlaneModel.cpp  PlaneModel.h  PrimitiveModel.cpp  PrimitiveModel.h  SphereModel.cpp  SphereModel.h  TorusModel.cpp  TorusModel.h
src/object_selector/: ObjectSelector.cpp  ObjectSelector.h
src/render/: DrawItem.h  Framebuffer.cpp  Framebuffer.h  Frustum.h  GLBuffer.h  GLVertexArray.h  Geometry.cpp  Geometry.h  GeometryRegistry.h  IBLBaker.cpp  IBLBaker.h  MeshRenderer.cpp  MeshRenderer.h  RenderContext.h  RenderModeHelper.cpp  RenderModeHelper.h  Renderer.cpp  Renderer.h  ShadowMap.cpp  ShadowMap.h  Skybox.cpp  Skybox.h  UniformsLocationCache.cpp  UniformsLocationCache.h  VertexAttribute.h  VertexAttributeLocations.h  VertexLayout.h  VertexLayoutPresets.h  VertexTypes.h
src/resources/: HDRLoader.cpp  HDRLoader.h  Texture2D.h  TextureCube.cpp  TextureCube.h  TextureManager.cpp  TextureManager.h
src/scene/: Prefab.cpp  Prefab.h  SceneSerializer.cpp  SceneSerializer.h  Serialization.cpp  Serialization.h
src/utils/: AssetPaths.cpp  AssetPaths.h  AssimpGlm.h  FileUtils.cpp  FileUtils.h  Math.h  Math3d.cpp  Math3d.h  StringUtils.cpp  StringUtils.h
